--- a/app/src/main/res/layout/cody_detail.xml
+++ b/app/src/main/res/layout/cody_detail.xml
@@ -41,25 +41,31 @@
             android:layout_gravity="right"
             android:orientation="horizontal">
 
-            <Button
+            <CheckBox
                 android:id="@+id/detail_Modify"
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:layout_weight="2"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="2"
-                android:drawableLeft="@drawable/edit"
-                android:text="수정" />
+                android:textAlignment="center"
+                android:button="@null"
+                android:background="#e9ecef"
+                android:text="수정"
+                android:drawableLeft="@drawable/edit"/>
 
             <Button
-                android:id="@+id/detail_delete"
+                android:id="@+id/detail_Delete"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="35dp"
+                android:layout_weight="2"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="2"
-                android:drawableLeft="@drawable/delete"
-                android:text="삭제" />
+                android:textAlignment="center"
+                android:button="@null"
+                android:background="#e9ecef"
+                android:text="삭제"
+                android:drawableLeft="@drawable/delete"/>
 
         </LinearLayout>
 
@@ -67,7 +73,7 @@
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/detail_c_img"
+            android:id="@+id/detail_cod_img"
             android:layout_marginBottom="16dp"
             android:layout_gravity="center"
             android:background="#00ff0000"
