--- a/app/src/main/res/layout/cody.xml
+++ b/app/src/main/res/layout/cody.xml
@@ -42,7 +42,7 @@
                             android:background="#00ff0000"
                             android:padding="0dp"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/sun" />
+                            android:src="@drawable/loading" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
@@ -57,7 +57,7 @@
                                 android:id="@+id/weatherDegree"
                                 android:layout_width="70dp"
                                 android:layout_height="match_parent"
-                                android:text="12°"
+                                android:text="로딩중"
                                 android:textSize="40dp" />
                         </LinearLayout>
                         <LinearLayout
@@ -87,7 +87,7 @@
                         android:layout_weight="3"
                         android:drawableLeft="@drawable/location"
                         android:drawablePadding="-7dp"
-                        android:text="성남시 복정동"
+                        android:text="주소 출력"
                         android:textSize="14dp"
                         android:background="#00ff0000"/>
                     <ImageButton
