--- a/app/src/main/res/layout/cody_detail.xml
+++ b/app/src/main/res/layout/cody_detail.xml
@@ -71,13 +71,51 @@
 
         <ImageButton
             android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:id="@+id/detail_cod_img"
             android:layout_marginBottom="16dp"
             android:layout_gravity="center"
             android:background="#00ff0000"
+            android:src="@drawable/baseline_add_box_24"
             android:scaleType="fitCenter"/>
+        <CheckBox
+            android:id="@+id/default_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="기본 이미지로 설정"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="코디 위치"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp" />
+
+        <Spinner
+            android:id="@+id/detail_cod_loc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"/>
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="코디 이름"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/detail_cod_name"
+            android:enabled="false"
+            android:text="코디 이름"
+            android:textSize="18dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="8dp"/>
 
         <GridLayout
             android:layout_width="wrap_content"
@@ -167,6 +205,96 @@
                 android:text="가방"/>
         </GridLayout>
 
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="등록 날짜"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/detail_cod_date"
+            android:enabled="false"
+            android:text="날짜"
+            android:textSize="18dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="8dp"/>
+
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="50dp" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="태그"
+                android:textSize="18dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="8dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="350dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp">
+
+            <CheckBox
+                android:id="@+id/weatherSelect_spring"
+                android:enabled="false"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:button="@null"
+                android:text="봄"
+                android:textAlignment="center"
+                android:background="#f1f3f5" />
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:button="@null"
+                android:text="여름"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_summer"
+                android:enabled="false"/>
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="가을"
+                android:layout_weight="1"
+                android:button="@null"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_fall"
+                android:enabled="false"/>
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="겨울"
+                android:layout_weight="1"
+                android:button="@null"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_winter"
+                android:enabled="false"/>
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="전체"
+                android:layout_weight="1"
+                android:button="@null"
+                android:textAlignment="center"
+                android:background="#f1f3f5"
+                android:id="@+id/weatherSelect_communal"
+                android:enabled="false"/>
+        </LinearLayout>
 
     </LinearLayout>
 
