--- a/app/src/main/res/layout/cody_detail.xml
+++ b/app/src/main/res/layout/cody_detail.xml
@@ -2,7 +2,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/post_main"
     android:fillViewport="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -20,7 +19,7 @@
             <ImageButton
                 android:layout_width="30dp"
                 android:layout_height="38dp"
-                android:id="@+id/btnBack_codyadd"
+                android:id="@+id/btnBack_detail"
                 android:background="#00ff0000"
                 android:src="@drawable/arrow_back"
                 android:layout_marginLeft="-10dp"
@@ -32,207 +31,218 @@
                 android:textSize="30sp"
                 android:layout_width="315dp"
                 android:layout_height="40dp"
-                android:text="코디등록"/>
+                android:text="상세정보"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="45dp"
+            android:layout_gravity="right"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/detail_Modify"
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:layout_weight="2"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:textAlignment="center"
+                android:button="@null"
+                android:background="#e9ecef"
+                android:text="수정"
+                android:drawableLeft="@drawable/edit"/>
+
+            <Button
+                android:id="@+id/detail_Delete"
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:layout_weight="2"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:textAlignment="center"
+                android:button="@null"
+                android:background="#e9ecef"
+                android:text="삭제"
+                android:drawableLeft="@drawable/delete"/>
 
         </LinearLayout>
 
         <ImageButton
             android:layout_marginTop="20dp"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:id="@+id/add_cod_thumb"
-            android:layout_marginBottom="8dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:id="@+id/detail_cod_img"
+            android:layout_marginBottom="16dp"
             android:layout_gravity="center"
+            android:background="#00ff0000"
             android:src="@drawable/baseline_add_box_24"
-            android:background="#00ff0000"
             android:scaleType="fitCenter"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#00ff0000"
-            android:layout_columnWeight="1"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="25dp"
-            android:text="대표 이미지" />
-
         <CheckBox
             android:id="@+id/default_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
             android:text="기본 이미지로 설정"
             android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="코디 위치"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp" />
+
+        <Spinner
+            android:id="@+id/detail_cod_loc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"/>
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="코디 이름"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/detail_cod_name"
+            android:enabled="false"
+            android:text="코디 이름"
+            android:textSize="18dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="8dp"/>
 
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:rowCount="8"
+            android:rowCount="4"
             android:columnCount="2"
             android:layout_gravity="center">
 
-            <ImageButton
-                android:id="@+id/detail_cod_index1"
+            <Button
+                android:id="@+id/detail_cod_top"
                 android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_height="30dp"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:src="@drawable/baseline_add_box_24"
+                android:drawableTop="@drawable/baseline_add_box_24"
                 android:text="상의"/>
 
-            <ImageButton
-                android:id="@+id/detail_cod_index2"
+            <Button
+                android:id="@+id/detail_cod_bottom"
                 android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:src="@drawable/baseline_add_box_24"
+                android:drawableTop="@drawable/baseline_add_box_24"
                 android:text="하의"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:layout_columnWeight="1"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:text="상의" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:layout_columnWeight="1"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:text="하의" />
-
-            <ImageButton
-                android:id="@+id/detail_cod_index3"
+            <Button
+                android:id="@+id/detail_cod_shoes"
                 android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:src="@drawable/baseline_add_box_24" />
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="신발"/>
 
-            <ImageButton
-                android:id="@+id/detail_cod_index4"
+            <Button
+                android:id="@+id/detail_cod_outer"
                 android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:src="@drawable/baseline_add_box_24" />
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="외투"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:layout_columnWeight="1"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:text="신발" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:layout_columnWeight="1"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:text="외투" />
-
-            <ImageButton
-                android:id="@+id/detail_cod_index5"
+            <Button
+                android:id="@+id/detail_cod_underwear"
                 android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:src="@drawable/baseline_add_box_24"/>
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="속옷"/>
 
-            <ImageButton
-                android:id="@+id/detail_cod_index6"
+            <Button
+                android:id="@+id/detail_cod_socks"
                 android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:src="@drawable/baseline_add_box_24"/>
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="양말"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:layout_columnWeight="1"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:text="속옷" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:layout_columnWeight="1"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:text="양말" />
-
-            <ImageButton
-                android:id="@+id/detail_cod_index7"
+            <Button
+                android:id="@+id/detail_cod_accessory"
                 android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:src="@drawable/baseline_add_box_24"/>
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="액세서리"/>
 
-            <ImageButton
-                android:id="@+id/detail_cod_index8"
+            <Button
+                android:id="@+id/detail_cod_bag"
                 android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:scaleType="fitCenter"
                 android:background="#FFFFFF"
-                android:src="@drawable/baseline_add_box_24"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:layout_columnWeight="1"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:text="액세서리" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:layout_columnWeight="1"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:text="가방" />
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="가방"/>
         </GridLayout>
 
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="등록 날짜"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/detail_cod_date"
+            android:enabled="false"
+            android:text="날짜"
+            android:textSize="18dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="8dp"/>
+
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="50dp" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="태그"
+                android:textSize="18dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="8dp"/>
+        </LinearLayout>
         <LinearLayout
             android:layout_width="350dp"
             android:layout_height="30dp"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp">
 
             <CheckBox
                 android:id="@+id/weatherSelect_spring"
+                android:enabled="false"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -249,7 +259,8 @@
                 android:text="여름"
                 android:textAlignment="center"
                 android:background="#f1f3f5"
-                android:id="@+id/weatherSelect_summer"/>
+                android:id="@+id/weatherSelect_summer"
+                android:enabled="false"/>
 
             <CheckBox
                 android:layout_width="match_parent"
@@ -259,7 +270,8 @@
                 android:button="@null"
                 android:textAlignment="center"
                 android:background="#f1f3f5"
-                android:id="@+id/weatherSelect_fall" />
+                android:id="@+id/weatherSelect_fall"
+                android:enabled="false"/>
 
             <CheckBox
                 android:layout_width="match_parent"
@@ -269,7 +281,8 @@
                 android:button="@null"
                 android:textAlignment="center"
                 android:background="#f1f3f5"
-                android:id="@+id/weatherSelect_winter" />
+                android:id="@+id/weatherSelect_winter"
+                android:enabled="false"/>
 
             <CheckBox
                 android:layout_width="match_parent"
@@ -279,41 +292,10 @@
                 android:button="@null"
                 android:textAlignment="center"
                 android:background="#f1f3f5"
-                android:id="@+id/weatherSelect_communal"/>
+                android:id="@+id/weatherSelect_communal"
+                android:enabled="false"/>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15dp"
-                android:text="코디명: "/>
-            <EditText
-                android:id="@+id/codyadd_title"
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="코디 위치"
-                android:textSize="15dp" />
 
-            <Spinner
-                android:id="@+id/cody_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <Button
-            android:layout_marginTop="20dp"
-            android:id="@+id/codyadd_post"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="등록"/>
     </LinearLayout>
-
 
 </ScrollView>
