--- a/app/src/main/res/layout/codyadd.xml
+++ b/app/src/main/res/layout/codyadd.xml
@@ -46,6 +46,12 @@
             android:src="@drawable/baseline_add_box_24"
             android:background="#00ff0000"
             android:scaleType="fitCenter"/>
+        <CheckBox
+            android:id="@+id/default_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="기본 이미지로 설정"
+            android:layout_gravity="center"/>
 
         <TextView
             android:layout_width="match_parent"
