--- a/app/src/main/res/layout/cody_detail.xml
+++ b/app/src/main/res/layout/cody_detail.xml
@@ -36,17 +36,29 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="45dp"
             android:layout_gravity="right"
+            android:gravity="end"
             android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/detail_Cancle"
+                android:layout_width="90dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:textAlignment="center"
+                android:button="@null"
+                android:background="#e9ecef"
+                android:text="취소"
+                android:drawableLeft="@drawable/cancle"/>
 
             <CheckBox
                 android:id="@+id/detail_Modify"
-                android:layout_width="0dp"
+                android:layout_width="90dp"
                 android:layout_height="35dp"
-                android:layout_weight="2"
-                android:layout_gravity="center"
+                android:layout_gravity="right|center"
                 android:layout_marginLeft="10dp"
                 android:textAlignment="center"
                 android:button="@null"
@@ -56,10 +68,9 @@
 
             <Button
                 android:id="@+id/detail_Delete"
-                android:layout_width="0dp"
+                android:layout_width="90dp"
                 android:layout_height="35dp"
-                android:layout_weight="2"
-                android:layout_gravity="center"
+                android:layout_gravity="right|center"
                 android:layout_marginLeft="10dp"
                 android:textAlignment="center"
                 android:button="@null"
@@ -79,12 +90,6 @@
             android:background="#00ff0000"
             android:src="@drawable/baseline_add_box_24"
             android:scaleType="fitCenter"/>
-        <CheckBox
-            android:id="@+id/default_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="기본 이미지로 설정"
-            android:layout_gravity="center"/>
 
         <TextView
             android:layout_marginTop="10dp"
@@ -205,23 +210,6 @@
                 android:text="가방"/>
         </GridLayout>
 
-        <TextView
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="등록 날짜"
-            android:layout_marginLeft="10dp"
-            android:textSize="20dp" />
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/detail_cod_date"
-            android:enabled="false"
-            android:text="날짜"
-            android:textSize="18dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="8dp"/>
-
         <LinearLayout
             android:layout_width="100dp"
             android:layout_height="50dp" >
@@ -295,6 +283,23 @@
                 android:id="@+id/weatherSelect_communal"
                 android:enabled="false"/>
         </LinearLayout>
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="등록 날짜"
+            android:layout_marginLeft="10dp"
+            android:textSize="20dp" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/detail_cod_date"
+            android:enabled="false"
+            android:text="날짜"
+            android:textSize="18dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="8dp"/>
 
     </LinearLayout>
 
