--- a/app/src/main/res/layout/cody.xml
+++ b/app/src/main/res/layout/cody.xml
@@ -187,7 +187,10 @@
                 android:id="@+id/gl_cody"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:background="#00ff0000"></GridLayout>
+                tools:background="#00ff0000"
+                >
+
+            </GridLayout>
         </ScrollView>
 
         <ImageButton
@@ -221,6 +224,7 @@
             android:layout_marginRight="10dp"
             android:translationZ="500dp"
             android:textAlignment="center"
+            android:textColor="#76000000"
             android:text="오늘의\n추천 코디" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
