--- a/app/src/main/res/layout/settings_service.xml
+++ b/app/src/main/res/layout/settings_service.xml
@@ -53,7 +53,7 @@
                 android:textColor="@color/black"
                 android:textSize="17dp"
                 android:paddingLeft="20dp"
-                android:text="" />
+                android:text="기능 관련:@김주영  " />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
@@ -62,7 +62,7 @@
                 android:textColor="@color/black"
                 android:textSize="17dp"
                 android:paddingLeft="20dp"
-                android:text="" />
+                android:text="기능 관련: " />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
@@ -71,7 +71,7 @@
                 android:textColor="@color/black"
                 android:textSize="17dp"
                 android:paddingLeft="20dp"
-                android:text="" />
+                android:text="디자인 관련: " />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
@@ -80,8 +80,7 @@
                 android:textColor="@color/black"
                 android:textSize="17dp"
                 android:paddingLeft="20dp"
-                android:text="" />
-
+                android:text="디자인 관련: sean7890@naver.com " />
 
             <View
                 android:layout_width="match_parent"
@@ -89,5 +88,6 @@
                 android:layout_marginHorizontal="10dp"
                 android:background="#aaa"/>
         </LinearLayout>
+
     </ScrollView>
 </LinearLayout>
