--- a/app/src/main/res/layout/addmenu.xml
+++ b/app/src/main/res/layout/addmenu.xml
@@ -66,8 +66,8 @@
             android:layout_height="60dp"
             android:src="@drawable/addcircle"
             android:scaleType="centerCrop"
-            android:layout_gravity="center"
-            android:layout_marginTop="306.3dp"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="33.2dp"
             android:background="#00ff0000"/>
     </FrameLayout>
 
