--- a/app/src/main/res/layout/codyadd.xml
+++ b/app/src/main/res/layout/codyadd.xml
@@ -31,7 +31,7 @@
                 android:textAlignment="center"
                 android:textSize="30sp"
                 android:layout_width="315dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:text="코디등록"/>
 
         </LinearLayout>
