글씨 크기 수정

--- a/app/src/main/res/layout/cody.xml
+++ b/app/src/main/res/layout/cody.xml
@@ -80,6 +80,7 @@
                                 android:id="@+id/timeNow"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
+                                android:textSize="14dp"
                                 android:text="   로딩중" />
                         </LinearLayout>
                     </LinearLayout>
