--- a/app/src/main/res/layout/tab_modify_cody.xml
+++ b/app/src/main/res/layout/tab_modify_cody.xml
@@ -21,6 +21,7 @@
             android:layout_marginLeft="10dp"
             android:background="#e9ecef"
             android:text="추가"
+            android:textSize="14dp"
             android:drawableLeft="@drawable/listadd" />
         <CheckBox
             android:id="@+id/modify_Modify"
@@ -33,6 +34,7 @@
             android:button="@null"
             android:background="#e9ecef"
             android:text="수정"
+            android:textSize="14dp"
             android:drawableLeft="@drawable/edit"/>
 
         <View
