--- a/app/src/main/res/layout/tab_sort_cody.xml
+++ b/app/src/main/res/layout/tab_sort_cody.xml
@@ -20,6 +20,17 @@
             android:layout_marginLeft="15dp"
             android:layout_gravity="center"
             android:textStyle="bold" />
+        <Button
+            android:id="@+id/tag_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#00ff0000"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_marginTop="3dp"
+            android:textAlignment="center"
+            android:textSize="18dp"
+            android:text="↻초기화" />
 
         <ImageButton
             android:id="@+id/tabsortClose"
@@ -43,15 +54,6 @@
             android:textAlignment="center"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="35dp" />
-        <CheckBox
-            android:id="@+id/tag_apply"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="14dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="10dp"
-            android:text="정확한 검색" />
     </LinearLayout>
 
     <LinearLayout
